WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
35923
[v8] Break access from devtools utility context to inspected frame
https://bugs.webkit.org/show_bug.cgi?id=35923
Summary
[v8] Break access from devtools utility context to inspected frame
Yury Semikhatsky
Reported
2010-03-09 07:49:50 PST
Utility context tries to mimic inspected context by providing same global object as the inspected context. It's only needed for page reload to work correctly. The whole method DebuggerAgentImpl::createUtilityContext should go away.
Attachments
patch
(1.42 KB, patch)
2010-03-09 07:56 PST
,
Yury Semikhatsky
no flags
Details
Formatted Diff
Diff
patch
(7.33 KB, patch)
2010-03-09 07:57 PST
,
Yury Semikhatsky
pfeldman
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Yury Semikhatsky
Comment 1
2010-03-09 07:56:59 PST
Created
attachment 50309
[details]
patch
Yury Semikhatsky
Comment 2
2010-03-09 07:57:42 PST
Created
attachment 50310
[details]
patch
Yury Semikhatsky
Comment 3
2010-03-09 09:22:57 PST
Committing to
http://svn.webkit.org/repository/webkit/trunk
... M WebCore/ChangeLog M WebCore/inspector/InspectorBackend.cpp M WebCore/inspector/InspectorController.cpp M WebKit/chromium/ChangeLog M WebKit/chromium/src/DebuggerAgentImpl.cpp M WebKit/chromium/src/DebuggerAgentImpl.h M WebKit/chromium/src/WebDevToolsAgentImpl.cpp Committed
r55726
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug