2010-03-09  Yury Semikhatsky  <yurys@chromium.org>

Reviewed by Pavel Feldman.

        When enable resource tracking state changes use the same method as
        location.reload for reloading inspected page.

        https://bugs.webkit.org/show_bug.cgi?id=35923

        * inspector/InspectorBackend.cpp:
        (WebCore::InspectorBackend::reloadPage):
        * inspector/InspectorController.cpp:
        (WebCore::InspectorController::enableResourceTracking):

2010-03-09  Yury Semikhatsky  <yurys@chromium.org>

        Reviewed by Pavel Feldman.

        Use clean global object for devtools utility context instead of
        trying to simulate inspected context.

        https://bugs.webkit.org/show_bug.cgi?id=35923

        * src/DebuggerAgentImpl.cpp:
        * src/DebuggerAgentImpl.h:
        * src/WebDevToolsAgentImpl.cpp:
        (WebKit::WebDevToolsAgentImpl::resetInspectorFrontendProxy):


Canonical link: https://commits.webkit.org/47023@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@55726 268f45cc-cd09-0410-ab3c-d52691b4dbfc