WebCore/inspector/InspectorBackend.cpp
@@ -131,7 +131,7 @@ void InspectorBackend::getResourceContent(long callId, unsigned long identifier)
 void InspectorBackend::reloadPage()
 {
     if (m_inspectorController)
-        m_inspectorController->m_inspectedPage->mainFrame()->loader()->reload();
+        m_inspectorController->m_inspectedPage->mainFrame()->redirectScheduler()->scheduleRefresh(true);
 }
 
 void InspectorBackend::startTimelineProfiler()
